--- a/listallorgclients.ipynb
+++ b/listallorgclients.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Meraki dashboard API session initialized with these parameters: {'self': <meraki.aio.rest_session.AsyncRestSession object at 0x000001DCBF265908>, 'logger': <Logger meraki.aio (DEBUG)>, 'api_key': '************************************dd9a', 'base_url': 'https://api.meraki.com/api/v0', 'single_request_timeout': 60, 'certificate_path': '', 'requests_proxy': '', 'wait_on_rate_limit': True, 'nginx_429_retry_wait_time': 60, 'action_batch_retry_wait_time': 60, 'retry_4xx_error': False, 'retry_4xx_error_wait_time': 60, 'maximum_retries': 2, 'simulate': False, 'maximum_concurrent_requests': 3, 'be_geo_id': None, 'caller': None, '__class__': <class 'meraki.aio.rest_session.AsyncRestSession'>}\n",
+      "  meraki.aio:     INFO > Meraki dashboard API session initialized with these parameters: {'self': <meraki.aio.rest_session.AsyncRestSession object at 0x000001DCBF265908>, 'logger': <Logger meraki.aio (DEBUG)>, 'api_key': '84444484889942432****************dd9a', 'base_url': 'https://api.meraki.com/api/v0', 'single_request_timeout': 60, 'certificate_path': '', 'requests_proxy': '', 'wait_on_rate_limit': True, 'nginx_429_retry_wait_time': 60, 'action_batch_retry_wait_time': 60, 'retry_4xx_error': False, 'retry_4xx_error_wait_time': 60, 'maximum_retries': 2, 'simulate': False, 'maximum_concurrent_requests': 3, 'be_geo_id': None, 'caller': None, '__class__': <class 'meraki.aio.rest_session.AsyncRestSession'>}\n",
       "  meraki.aio:     INFO > Organizations, getOrganizations > https://n214.meraki.com/api/v0/organizations - 200 OK\n"
      ]
     },
