--- a/listallorgclients.ipynb
+++ b/listallorgclients.ipynb
@@ -24,48 +24,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Networks, getOrganizationNetworks > https://n214.meraki.com/api/v0/organizations/683421243453473195/networks - 200 OK\n"
+      "  meraki.aio:     INFO > Networks, getOrganizationNetworks > https://n214.meraki.com/api/v0/organizations/612354243453473195/networks - 200 OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iterating through 27 networks in organization 683421243453473195\n",
-      "Finding clients in network M4 Access Points\n",
-      "Finding clients in network SHEIKHUPURA\n",
-      "Finding clients in network FWO-M2-LHR\n",
-      "Finding clients in network KOT-ABDUL-MALIK\n",
-      "Finding clients in network MX-600 HQ\n",
-      "Finding clients in network FAIZPUR\n",
-      "Finding clients in network M3STP\n",
-      "Finding clients in network MX84 - THALLIAN\n",
-      "Finding clients in network RAVI\n",
-      "Finding clients in network MX84-Peshawar\n",
-      "Finding clients in network LSM\n",
-      "Finding clients in network LILLAH\n",
-      "Finding clients in network FAISALABAD\n",
-      "Finding clients in network BHERA\n",
-      "Finding clients in network KALAR-KAHAR\n",
-      "Finding clients in network SALAM\n",
-      "Finding clients in network BALKASAR\n",
-      "Finding clients in network KALA-SHAH-KAKU\n",
-      "Finding clients in network NEELA-DULLAH\n",
-      "Finding clients in network FWO-M4-FSD\n",
-      "Finding clients in network KOT-MOMIN\n",
-      "Finding clients in network CHAKARI\n",
-      "Finding clients in network SIAL\n",
-      "Finding clients in network PINDI BHATTIAN\n",
-      "Finding clients in network KOT-SARWAR\n",
-      "Finding clients in network KHANQA-DOGRAN\n",
-      "Finding clients in network HIRAN-MINAR\n"
+      "Iterating through 27 networks in organization 612354243453473195\n",
+      "Finding clients in network Access Points\n","
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502180/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -79,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453498120/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -94,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502184/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -122,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502194/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -136,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502172/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -150,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502183/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -164,8 +138,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453498243/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502178/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -181,8 +155,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502176/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502185/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -197,8 +171,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453499161/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502175/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -214,8 +188,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502192/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453499153/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -231,8 +205,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502182/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502177/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -247,8 +221,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502174/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502193/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -263,7 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453498103/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -278,8 +252,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502191/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502190/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -294,7 +268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502173/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -308,8 +282,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502179/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502181/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
@@ -324,8 +298,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453502187/clients - 200 OK\n",
-      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/N_683421243453498115/clients - 200 OK\n"
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n",
+      "  meraki.aio:     INFO > Clients, getNetworkClients; page 1 > https://n214.meraki.com/api/v0/networks/612354243453473195/clients - 200 OK\n"
      ]
     },
     {
