--- a/listallorgclients.ipynb
+++ b/listallorgclients.ipynb
@@ -61,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "Successfully output 123 clients' data to file M4 Access Points.csv\n",
-      "finished network: M4 Access Points\n"
+      "finished network: M4 Access Points\n""
      ]
     },
     {
